--- a/HA_System.qsf
+++ b/HA_System.qsf
@@ -70,6 +70,8 @@ set_global_assignment -name EDA_TEST_BENCH_NAME Display_data_TB -section_id eda_
 set_global_assignment -name EDA_DESIGN_INSTANCE_NAME NA -section_id Display_data_TB
 set_global_assignment -name EDA_TEST_BENCH_MODULE_NAME Display_data_TB -section_id Display_data_TB
 set_global_assignment -name EDA_TEST_BENCH_FILE src/Display_data/Display_data_TB.vhd -section_id Display_data_TB
+set_global_assignment -name BDF_FILE src/Code_register/Code_Register_symbol_file.bdf
+set_global_assignment -name BDF_FILE src/Press_duration_measure/Press_duration_measure_symbol_file.bdf
 set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
 set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
 set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
